@@ -36,7 +36,7 @@
         "a": 0
     },
     "absorbed": {
-        "r": 8,
+        "r": 15,
         "g": 1.96798967127,
         "b": 1.96798967127,
         "a": 0.3
