@@ -36,7 +36,7 @@
         "a": 0
     },
     "absorbed": {
-        "r": 4,
+        "r": 8,
         "g": 1.09044,
         "b": 1.09044,
         "a": 0.5
